# first_Qt

./: .gitignore  CMakeLists.txt  main.cpp  widget.cpp  widget.h  widget.ui
